# project-composer-ci-cd

./: .gitignore  404.html  README.md  exemple.env  index.html  mkdocs.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: pipeline-composer-dags-dsv.yml  pipeline-composer-dags-prd.yml  pipeline-dag-composer.yml
CreateComposerInstance-prd/: .terraform.lock.hcl  main.tf
create_composer_instance/: backend.tf  dev.tfvars  prod.tfvars  variables.tf
dags/: dag_exemple.py  dag_exemple_decorator.py  dag_exemple_new.py  dag_exemplo.py  dag_exemplo_2.py  dag_exemplo_decorator.py  dag_exemplo_new.py
docs/: index.md
search/: search_index.json
tests/: dag_exemple_decorator_test.py  dag_exemple_test.py  dag_exemplo_new_test.py  dag_exemplo_test.py  dag_exemplo_test_2.py  test_dag_import_errors.py  test_dag_tags.py
tests/dag_test_utils/: unit_testing.py
